--- a/client/package.json
+++ b/client/package.json
@@ -19,6 +19,7 @@
     "antd": "^5.5.0",
     "bootstrap": "^5.2.3",
     "bootstrap-icons": "^1.10.5",
+    "dotenv": "^16.3.1",
     "mdb-react-ui-kit": "^6.0.0",
     "react": "^18.2.0",
     "react-bootstrap": "^2.7.2",
